// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/bitbucket/index addAssignees() does not throw 1`] = `undefined`;

exports[`platform/bitbucket/index addReviewers should add the given reviewers to the PR 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
  Object {
    "body": Object {
      "reviewers": Array [
        Object {
          "username": "someuser",
        },
        Object {
          "username": "someotheruser",
        },
      ],
      "title": "title",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "84",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
]
`;

exports[`platform/bitbucket/index createPr() posts PR 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/default-reviewers",
  },
  Object {
    "body": Object {
      "close_source_branch": true,
      "description": "body",
      "destination": Object {
        "branch": Object {
          "name": "master",
        },
      },
      "reviewers": Array [
        Object {
          "account_id": "1234-5678",
        },
      ],
      "source": Object {
        "branch": Object {
          "name": "branch",
        },
      },
      "title": "title",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "187",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests",
  },
]
`;

exports[`platform/bitbucket/index ensureComment() does not throw 1`] = `false`;

exports[`platform/bitbucket/index ensureCommentRemoval() does not throw 1`] = `undefined`;

exports[`platform/bitbucket/index ensureIssue() creates new issue 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/empty",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/empty/issues?q=title%3D%22title%22%20AND%20(state%20%3D%20%22new%22%20OR%20state%20%3D%20%22open%22)%20AND%20reporter.username%3D%22abc%22",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/empty/issues?q=title%3D%22old-title%22%20AND%20(state%20%3D%20%22new%22%20OR%20state%20%3D%20%22open%22)%20AND%20reporter.username%3D%22abc%22",
  },
  Object {
    "body": Object {
      "content": Object {
        "markup": "markdown",
        "raw": "body",
      },
      "title": "title",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "62",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/2.0/repositories/some/empty/issues",
  },
]
`;

exports[`platform/bitbucket/index ensureIssue() noop for existing issue 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues?q=title%3D%22title%22%20AND%20(state%20%3D%20%22new%22%20OR%20state%20%3D%20%22open%22)%20AND%20reporter.username%3D%22abc%22",
  },
  Object {
    "body": Object {
      "state": "closed",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "18",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues/26",
  },
]
`;

exports[`platform/bitbucket/index ensureIssue() updates existing issues 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues?q=title%3D%22title%22%20AND%20(state%20%3D%20%22new%22%20OR%20state%20%3D%20%22open%22)%20AND%20reporter.username%3D%22abc%22",
  },
  Object {
    "body": Object {
      "state": "closed",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "18",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues/26",
  },
  Object {
    "body": Object {
      "content": Object {
        "markup": "markdown",
        "raw": "body",
      },
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "46",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues/25",
  },
]
`;

exports[`platform/bitbucket/index ensureIssueClosing() closes issue 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues?q=title%3D%22title%22%20AND%20(state%20%3D%20%22new%22%20OR%20state%20%3D%20%22open%22)%20AND%20reporter.username%3D%22abc%22",
  },
  Object {
    "body": Object {
      "state": "closed",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "18",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues/25",
  },
  Object {
    "body": Object {
      "state": "closed",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "18",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues/26",
  },
]
`;

exports[`platform/bitbucket/index ensureIssueClosing() does not throw 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
]
`;

exports[`platform/bitbucket/index findIssue() does not throw 1`] = `
Object {
  "body": "content",
  "number": 25,
}
`;

exports[`platform/bitbucket/index findIssue() does not throw 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues?q=title%3D%22title%22%20AND%20(state%20%3D%20%22new%22%20OR%20state%20%3D%20%22open%22)%20AND%20reporter.username%3D%22abc%22",
  },
]
`;

exports[`platform/bitbucket/index findIssue() returns null if no issues 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/empty",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/empty/issues?q=title%3D%22title%22%20AND%20(state%20%3D%20%22new%22%20OR%20state%20%3D%20%22open%22)%20AND%20reporter.username%3D%22abc%22",
  },
]
`;

exports[`platform/bitbucket/index findPr() finds pr 1`] = `
Object {
  "body": "summary",
  "createdAt": "2018-07-02T07:02:25.275030+00:00",
  "displayNumber": "Pull Request #5",
  "number": 5,
  "sourceBranch": "branch",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
}
`;

exports[`platform/bitbucket/index findPr() finds pr 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests?state=OPEN&state=MERGED&state=DECLINED&state=SUPERSEDED&pagelen=50",
  },
]
`;

exports[`platform/bitbucket/index getBranchPr() bitbucket finds PR for branch 1`] = `
Object {
  "body": "summary",
  "createdAt": "2018-07-02T07:02:25.275030+00:00",
  "displayNumber": "Pull Request #5",
  "hasReviewers": false,
  "number": 5,
  "sourceBranch": "branch",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
}
`;

exports[`platform/bitbucket/index getBranchPr() bitbucket finds PR for branch 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests?state=OPEN&state=MERGED&state=DECLINED&state=SUPERSEDED&pagelen=50",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
]
`;

exports[`platform/bitbucket/index getBranchPr() returns null if no PR for branch 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests?state=OPEN&state=MERGED&state=DECLINED&state=SUPERSEDED&pagelen=50",
  },
]
`;

exports[`platform/bitbucket/index getBranchStatus() getBranchStatus 3 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/refs/branches/master",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/commit/master_hash/statuses?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/index getBranchStatus() getBranchStatus 4 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/refs/branches/branch",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/commit/branch_hash/statuses?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/index getBranchStatus() getBranchStatus 5 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/refs/branches/pending/branch",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/commit/pending/branch_hash/statuses?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/index getBranchStatus() getBranchStatus 6 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/refs/branches/branch-with-empty-status",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/commit/branch-with-empty-status/statuses?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/index getBranchStatusCheck() getBranchStatusCheck 1 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/refs/branches/master",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/commit/master_hash/statuses?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/index getBranchStatusCheck() getBranchStatusCheck 2 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/refs/branches/master",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/commit/master_hash/statuses?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/index getBranchStatusCheck() getBranchStatusCheck 3 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/refs/branches/master",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/commit/master_hash/statuses?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/index getIssueList() does not throw 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues?q=(state%20%3D%20%22new%22%20OR%20state%20%3D%20%22open%22)%20AND%20reporter.username%3D%22abc%22",
  },
]
`;

exports[`platform/bitbucket/index getIssueList() get issues 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/issues?q=(state%20%3D%20%22new%22%20OR%20state%20%3D%20%22open%22)%20AND%20reporter.username%3D%22abc%22",
  },
]
`;

exports[`platform/bitbucket/index getIssueList() get issues 2`] = `
Array [
  Object {
    "content": Object {
      "raw": "content",
    },
    "id": 25,
    "title": "title",
  },
  Object {
    "content": Object {
      "raw": "content",
    },
    "id": 26,
    "title": "title",
  },
]
`;

exports[`platform/bitbucket/index getIssueList() has no issues 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
]
`;

exports[`platform/bitbucket/index getJsonFile() returns file content 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/src/HEAD/file.json",
  },
]
`;

exports[`platform/bitbucket/index getJsonFile() returns file content from branch or tag 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/src/dev/file.json",
  },
]
`;

exports[`platform/bitbucket/index getJsonFile() returns file content from branch with a slash in its name 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/refs/branches/feat/123-test",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/src/1234567890/file.json",
  },
]
`;

exports[`platform/bitbucket/index getJsonFile() returns file content from given repo 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/different/repo/src/HEAD/file.json",
  },
]
`;

exports[`platform/bitbucket/index getJsonFile() returns file content in json5 format 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/src/HEAD/file.json5",
  },
]
`;

exports[`platform/bitbucket/index getJsonFile() throws on errors 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/src/HEAD/file.json",
  },
]
`;

exports[`platform/bitbucket/index getJsonFile() throws on malformed JSON 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/src/HEAD/file.json",
  },
]
`;

exports[`platform/bitbucket/index getPr() canRebase 1`] = `
Object {
  "body": "summary",
  "createdAt": "2018-07-02T07:02:25.275030+00:00",
  "displayNumber": "Pull Request #3",
  "hasReviewers": false,
  "number": 3,
  "sourceBranch": "branch",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
}
`;

exports[`platform/bitbucket/index getPr() canRebase 2`] = `
Object {
  "body": "summary",
  "createdAt": "2018-07-02T07:02:25.275030+00:00",
  "displayNumber": "Pull Request #5",
  "hasReviewers": false,
  "number": 5,
  "sourceBranch": "branch",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
}
`;

exports[`platform/bitbucket/index getPr() canRebase 3`] = `
Object {
  "body": "summary",
  "createdAt": "2018-07-02T07:02:25.275030+00:00",
  "displayNumber": "Pull Request #5",
  "hasReviewers": false,
  "number": 5,
  "sourceBranch": "branch",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
}
`;

exports[`platform/bitbucket/index getPr() canRebase 4`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/3",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
]
`;

exports[`platform/bitbucket/index getPr() exists 1`] = `
Object {
  "body": "summary",
  "createdAt": "2018-07-02T07:02:25.275030+00:00",
  "displayNumber": "Pull Request #5",
  "hasReviewers": false,
  "number": 5,
  "sourceBranch": "branch",
  "state": "open",
  "targetBranch": "master",
  "title": "title",
}
`;

exports[`platform/bitbucket/index getPr() exists 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
]
`;

exports[`platform/bitbucket/index getPrList() filters PR list by author 1`] = `
Array [
  Object {
    "body": undefined,
    "createdAt": undefined,
    "displayNumber": "Pull Request #1",
    "number": 1,
    "sourceBranch": "branch-a",
    "state": "open",
    "targetBranch": "branch-b",
    "title": undefined,
  },
]
`;

exports[`platform/bitbucket/index getPrList() filters PR list by author 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic cmVub3ZhdGU6cGFzcw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/user",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests?state=OPEN&state=MERGED&state=DECLINED&state=SUPERSEDED&q=author.uuid%3D%2212345%22&pagelen=50",
  },
]
`;

exports[`platform/bitbucket/index getRepos() returns repos 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories?role=contributor&pagelen=100",
  },
]
`;

exports[`platform/bitbucket/index initPlatform() should init 1`] = `
Object {
  "endpoint": "https://api.bitbucket.org/",
}
`;

exports[`platform/bitbucket/index initRepo() works 1`] = `
Object {
  "defaultBranch": "master",
  "isFork": false,
}
`;

exports[`platform/bitbucket/index initRepo() works 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
]
`;

exports[`platform/bitbucket/index massageMarkdown() returns diff files 1`] = `"**foo**bartext"`;

exports[`platform/bitbucket/index mergePr() posts Merge with auto 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "body": Object {
      "close_source_branch": true,
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "28",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/merge",
  },
]
`;

exports[`platform/bitbucket/index mergePr() posts Merge with fast-forward 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "body": Object {
      "close_source_branch": true,
      "merge_strategy": "fast_forward",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "60",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/merge",
  },
]
`;

exports[`platform/bitbucket/index mergePr() posts Merge with merge-commit 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "body": Object {
      "close_source_branch": true,
      "merge_strategy": "merge_commit",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "60",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/merge",
  },
]
`;

exports[`platform/bitbucket/index mergePr() posts Merge with optional merge strategy 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "body": Object {
      "close_source_branch": true,
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "28",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/merge",
  },
]
`;

exports[`platform/bitbucket/index mergePr() posts Merge with squash 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "body": Object {
      "close_source_branch": true,
      "merge_strategy": "squash",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "54",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/merge",
  },
]
`;

exports[`platform/bitbucket/index setBranchStatus() posts status 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/refs/branches/branch",
  },
  Object {
    "body": Object {
      "description": "description",
      "key": "context",
      "name": "context",
      "state": "FAILED",
      "url": "targetUrl",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "97",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/commit/branch_hash/statuses/build",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/refs/branches/branch",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/commit/branch_hash/statuses?pagelen=100",
  },
]
`;

exports[`platform/bitbucket/index updatePr() closes PR 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
  Object {
    "body": Object {
      "title": "title",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "17",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5/decline",
  },
]
`;

exports[`platform/bitbucket/index updatePr() puts PR 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
  Object {
    "body": Object {
      "description": "body",
      "reviewers": Array [
        Object {
          "display_name": "Jane Smith",
          "uuid": "{90b6646d-1724-4a64-9fd9-539515fe94e9}",
        },
      ],
      "title": "title",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "130",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
]
`;

exports[`platform/bitbucket/index updatePr() removes inactive reviewers when updating pr 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
  Object {
    "body": Object {
      "description": "body",
      "reviewers": Array [
        Object {
          "account_id": "456",
          "display_name": "Jane Smith",
          "uuid": "{90b6646d-1724-4a64-9fd9-539515fe94e9}",
        },
        Object {
          "account_id": "123",
          "display_name": "Bob Smith",
          "uuid": "{d2238482-2e9f-48b3-8630-de22ccb9e42f}",
        },
      ],
      "title": "title",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "245",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/users/456",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/users/123",
  },
  Object {
    "body": Object {
      "description": "body",
      "reviewers": Array [
        Object {
          "account_id": "456",
          "display_name": "Jane Smith",
          "uuid": "{90b6646d-1724-4a64-9fd9-539515fe94e9}",
        },
      ],
      "title": "title",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "149",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
]
`;

exports[`platform/bitbucket/index updatePr() rethrows exception when PR update error due to unknown reviewers error 1`] = `"Response code 400 (Bad Request)"`;

exports[`platform/bitbucket/index updatePr() rethrows exception when PR update error due to unknown reviewers error 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
  Object {
    "body": Object {
      "description": "body",
      "reviewers": Array [
        Object {
          "display_name": "Jane Smith",
          "uuid": "{90b6646d-1724-4a64-9fd9-539515fe94e9}",
        },
      ],
      "title": "title",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "content-length": "130",
      "content-type": "application/json",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "PUT",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
]
`;

exports[`platform/bitbucket/index updatePr() throws an error on failure to get current list of reviewers 1`] = `"Response code 500 (Internal Server Error)"`;

exports[`platform/bitbucket/index updatePr() throws an error on failure to get current list of reviewers 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic YWJjOjEyMw==",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/some/repo/pullrequests/5",
  },
]
`;
